Agrega metatags Open Graph y og-image.jpg

--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Pets Link</title>
-    <!-- Agregar el favicon -->
+
+    <!-- Favicon -->
     <link rel="icon" href="/favicon.ico" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Pets Link - Comunidad para Mascotas" />
+    <meta property="og:description" content="Unite a la red de ayuda para mascotas perdidas, adopciones y cuidado animal. 100% gratuito." />
+    <meta property="og:image" content="https://pets-link.vercel.app/og-image.jpg" />
+    <meta property="og:url" content="https://pets-link.vercel.app/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
   </head>
   <body>
     <div id="root"></div>
