--- a/index.html
+++ b/index.html
@@ -1,25 +1,22 @@
-<!DOCTYPE html>
-<html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Pets Link</title>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Pets Link</title>
 
-    <!-- Favicon -->
-    <link rel="icon" href="/favicon.ico" />
+  <!-- Favicon -->
+  <link rel="icon" href="/favicon.ico" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:title" content="Pets Link - Comunidad para Mascotas" />
-    <meta property="og:description" content="Unite a la red de ayuda para mascotas perdidas, adopciones y cuidado animal. 100% gratuito." />
-    <meta property="og:image" content="https://pets-link.vercel.app/og-image.jpg" />
-    <meta property="og:url" content="https://pets-link.vercel.app/" />
-    <meta property="og:type" content="website" />
+  <!-- Open Graph / Facebook -->
+  <meta property="og:title" content="Pets Link - Comunidad para Mascotas" />
+  <meta property="og:description" content="Unite a la red de ayuda para mascotas perdidas, adopciones y cuidado animal. 100% gratuito." />
+  <meta property="og:image" content="https://pets-link.vercel.app/og-image.jpg" />
+  <meta property="og:url" content="https://pets-link.vercel.app/" />
+  <meta property="og:type" content="website" />
 
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
-</html>
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+
+  <!-- Google AdSense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9599705112528804"
+      crossorigin="anonymous"></script>
+</head>
