--- a/index.html
+++ b/index.html
@@ -4,17 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Pets Link</title>
+
+    <!-- Favicon -->
     <link rel="icon" href="/favicon.ico" />
+
+    <!-- Open Graph / Facebook -->
     <meta property="og:title" content="Pets Link - Comunidad para Mascotas" />
     <meta property="og:description" content="Unite a la red de ayuda para mascotas perdidas, adopciones y cuidado animal. 100% gratuito." />
     <meta property="og:image" content="https://pets-link.vercel.app/og-image.jpg" />
     <meta property="og:url" content="https://pets-link.vercel.app/" />
     <meta property="og:type" content="website" />
+
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    
-    <!-- Google AdSense -->
+
+    <!-- Google AdSense script -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9599705112528804"
         crossorigin="anonymous"></script>
+
+    <!-- Google AdSense meta tag -->
+    <meta name="google-adsense-account" content="ca-pub-9599705112528804" />
   </head>
   <body>
     <div id="root"></div>
